sms 12 jira 63 and code cleanup